2003-01-24  Jochen Eisinger <jochen.eisinger@gmx.de>

	* backend/mustek_pp_ccd300.c: continued on the CCD low-level driver.
	  There is still some bug in it, that keeps it from actually scanning
	  something...

2003-01-24  Jochen Eisinger <jochen.eisinger@gmx.de>

	* doc/descriptions/mustek_pp.desc: added supported scanners

2003-01-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/bh.c backend/coolscan.c: Minor conversion fixes (from
	  Andrea Suatoni <a.suatoni@telefonica.net>).
	* backend/test.c: Use "Color pattern" consistantly.
	* acinclude.m4 aclocal.m4 configure configure.in 
	  include/sane/config.h.in: Declare prototypes for all functions that
	  may miss on some platforms.
	* doc/descriptions/unsupported.desc: Added Mustek parport scanners.
	  Added more information for Primascan Colorado 2600u.
	* TODO: Updated Irix patches and desc section.

2003-01-24  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/plustek/Plustek-USB-TODO.txt
	  doc/plustek/Plustek-USB.txt
	  Documentation update
	* doc/descriptions/plustek.desc: status updates
	* backend/plustek.conf fixed options
	* backend/plustek.c backend/plustek-devs.c backend/plustek-usb.c
	  backend/plustek-usbhw.c backend/plustek-usbimg.c
	  backend/plustek-usbscan.c backend/plustek-usbshading.c
	  backend/plustek.h backend/plustek-usb.h
	  Minor fixes and prototype description updates, code cleanup

2003-01-23  Karl Heinz Kremer <khk@khk.net>

	* doc/descriptions/epson.desc: Added Perfection 3200/GT-9800

2003-01-23  Andras Major <andras@users.sourceforge.net>

	* backend/doc/sane-coolscan2.man: added a .TP that mysteriously
	  vanished

2003-01-23  Andras Major <andras@users.sourceforge.net>

	* backend/coolscan2.c: hack for IR readout with LS-4000.

2003-01-23  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Primax/Visioneer Primascan
	  Colorado 2600u and UMAX Astra 4500.

2003-01-22  Karl Heinz Kremer <khk@khk.net>
