@@ -1,3 +1,9 @@
+2003-01-25  Jochen Eisinger <jochen.eisinger@gmx.de>
+
+	* sanei/sanei_pa4s2.c: added some #ifdefs to make it compile with
+	  the Intel C++ Compiler (icc). The icc cannot expand assembler
+	  inline macros (at least not with -ip)
+	  
 2003-01-24  Jochen Eisinger <jochen.eisinger@gmx.de>
 
 	* backend/mustek_pp_ccd300.c: continued on the CCD low-level driver.
